<resources>
    <string name="app_name">CryptoClean</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_crypto">Bitcoin</string>
    <string name="symbol_of_crypto">BTC</string>
    <string name="price_of_coin">$28000.74</string>
    <string name="stock_quotes">4,7 %</string>
    <string name="list_of_crypto">Список криптовалют</string>
    <string name="usd_filter">USD</string>
    <string name="euro_filter">EUR</string>
    <string name="description">Описание:</string>
    <string name="history_of_crypto">Биткоин был...</string>
    <string name="category">Категории:</string>
    <string name="list_crypto">Список критовалют</string>
</resources>